--- a/assets/style/style.less
+++ b/assets/style/style.less
@@ -7,13 +7,13 @@
 }
 
 .action-icon-drop {
-    .glyphicon-minus;
+    .glyphicon-minus-sign;
     color: crimson;
 }
 
 .action-icon-add {
-    .glyphicon-plus;
-    color: green;
+    .glyphicon-plus-sign;
+    color: mediumaquamarine;
 }
 
 .action-icon-messageboard {
