--- a/assets/templates/leagues/recent_activity.html
+++ b/assets/templates/leagues/recent_activity.html
@@ -2,7 +2,17 @@
     {{league.name || 'League'}}
 </h2>
 <div class='row'>
-    <div class='col-md-6'>
+    <div class='col-md-4'>
+        <div class='panel panel-default'>
+            <div class='panel-heading'>
+                Manager's note
+            </div>
+            <div class='panel-body'>
+                <div ng-bind='manager_note'></div>
+            </div>
+        </div>
+    </div>
+    <div class='col-md-4'>
         <div class='panel panel-default'>
             <div class='panel-heading'>
                 Recent activity
@@ -12,7 +22,7 @@
                     <td>
                         <span class='action-icon action-icon-{{action.type}}'></span>
                         {{action.desc}}
-                        <span class='pull-right small'>
+                        <span class='pull-right small text-muted'>
                             {{action.date}} {{action.time}}
                         </span>
                     </td>
@@ -20,7 +30,7 @@
             </table>
         </div>
     </div>
-    <div class='col-md-6'>
+    <div class='col-md-4'>
         <div class='panel panel-default'>
             <div class='panel-heading'>
                 Standings
