--- a/assets/templates/leagues/recent_activity.html
+++ b/assets/templates/leagues/recent_activity.html
@@ -2,7 +2,7 @@
     {{league.name || 'League'}}
 </h2>
 <div class='row'>
-    <div class='col-md-4'>
+    <div class='col-md-12'>
         <div class='panel panel-default'>
             <div class='panel-heading'>
                 Manager's note
@@ -12,7 +12,9 @@
             </div>
         </div>
     </div>
-    <div class='col-md-4'>
+</div>
+<div class='row'>
+    <div class='col-md-8'>
         <div class='panel panel-default'>
             <div class='panel-heading'>
                 Recent activity
