--- a/assets/templates/leagues/recent_activity.html
+++ b/assets/templates/leagues/recent_activity.html
@@ -57,3 +57,21 @@
         </div>
     </div>
 </div>
+<h2>Scores</h2>
+<div class='row'>
+    <div ng-repeat='matchup in matchups' class='col-md-2'>
+        <div class='panel panel-default'>
+            <table class='table table-condensed'>
+                <tr ng-repeat='side in matchup'>
+                    <td>
+                        {{side.team.name}}
+                        <small class='text-muted' style='display: inline-block;'>{{side.team.record}}</small>
+                    </td>
+                    <td class='text-right'>
+                        <strong>{{side.score}}</strong>
+                    </td>
+                </tr>
+            </table>
+        </div>
+    </div>
+</div>
