--- a/assets/templates/leagues/stats.html
+++ b/assets/templates/leagues/stats.html
@@ -1,3 +1,13 @@
+<style type='text/css'>
+    .bar {
+        display: inline-block;
+        position: relative;
+        background-color: rgb(0, 64, 96);
+    }
+    .bar:hover {
+        background-color: rgb(192, 64, 64);
+    }
+</style>
 <div class='row'>
     <div class='col-sm-2' ng-repeat='pos in positions' id='top50_{{pos}}'>
             <h3>{{pos}}</h3>
@@ -5,6 +15,12 @@
                 ng-style='{height: h + "px"}'
                 style='background-color: rgba(0, 64, 96, 0.05); position: relative;'>
                 <span ng-if='!data'>Loading...</span>
+                <span style='position: absolute;'>
+                    {{hoverdatum.name}}
+                    {{hoverdatum.stats.points}}
+                </span>
+                <div class='chart'>
+                </div>
             </div>
     </div>
 </div>
